--- a/NewYear/src/index.css
+++ b/NewYear/src/index.css
@@ -6,7 +6,7 @@
 html, body{
     scroll-behavior: smooth;
     scrollbar-width: none;
-    font-family: 'Courier New', Courier;  
+    font-family: 'Courier New', Courier, monospace;  
 }
 
 .congra{
@@ -51,9 +51,9 @@ img{
 
 .typed_out{
     overflow: hidden;
-    border-right: .15em solid green;
     font-family: "VCR Mono", "Courier New";
-    font-size:20px;
+    font-size:25px;
+    margin-bottom: 40px;
 }
 
 .inlineDiv{
@@ -63,6 +63,8 @@ img{
 .info{
     z-index: 1;
     position: relative;
+    text-align: center;
+    margin: 0 auto
 }
 .btn{
     display: inline-block;	
@@ -86,6 +88,7 @@ img{
 	touch-action: manipulation;  
 	vertical-align: top;
 	transition: box-shadow 0.2s;
+    align-items: center;
 }
 
 .btn:focus-visible {
@@ -101,15 +104,35 @@ img{
 }
 .gif{
     height: 600px;
-    position: absolute;
-    z-index: 0;
-    filter: blur(3px);
-    opacity: .6;
     width: 1200px;
-    display: center;
     box-sizing: content-box;
+    margin-bottom: 20px;
 }
-
+.girlanda{
+    height: 150px;
+    position: absolute;
+    width: 100%;
+    margin-top: -65px;
+}
+.mainText{
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.ascii-art {
+    display: inline-block;
+    padding: 2em;
+    margin: 2em;
+    margin-top: 80px;
+    font-size: 12px;
+}
+.footer {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 30px;
+    margin-left: 340px;
+    background-color: rgb(222, 239, 250)
+}
 @font-face {
     font-family: "VCR Mono";
     src: url("./fonts/vcrosdmonorusbydaymarius.ttf");
