--- a/NewYear/src/index.css
+++ b/NewYear/src/index.css
@@ -13,15 +13,16 @@ html, body{
     display: flex;
     justify-content: center;
     list-style-type: none;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 180;
     gap: 75px;
     text-decoration: none;
     color: #fff;
+    -webkit-text-stroke: .2px rgb(109, 109, 109);
 }
 
 header{
-    background-color: #2b2f33;
+    background-image: url('./assets/ist.jpg');
 }
 
 header .container{
@@ -36,6 +37,31 @@ img{
     margin: auto;
 }
 
+main{
+    background-image: url('./assets/background3.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+main .container{
+    z-index: 1;
+    position: relative;
+
+}
+
+.backg{
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
+    position: absolute;
+    z-index: 1;
+    float: left;
+    background-image: url('./assets/background.png');
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    transform: translate(-140px, 10px);
+}
+
 .container{
     width: 1200px;
     margin: 0 auto;
@@ -43,34 +69,67 @@ img{
 }
 
 .first{
-    height: 1000px;
+    height: 1600px;
     background-color: rgb(222, 239, 250);
     justify-content: center;
     justify-items: center;
 }
 
 .typed_out{
+    margin-top: 25px;
+    border-top: 3px solid rgb(65, 65, 65);
+    padding: 5px;
     overflow: hidden;
-    font-family: "VCR Mono", "Courier New";
-    font-size:25px;
     margin-bottom: 40px;
+    text-align: left;
 }
 
 .inlineDiv{
+    color: rgb(10, 170, 10);
     display: inline-block;
+    font-family: "VCR Mono", "Courier New";
+    font-size:25px;
+    background-color: black;    
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 1200px;
+}
+
+.inlineDiv p{
+    text-align: left;
+    padding: 10px 0px 180px 5px;
+}
+
+.con{
+    text-align: left;
+    padding: 10px 0px 10px 5px;
+    z-index: -1;
+    background-color: rgb(90, 89, 89);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    color: white;
+    margin-top: 25px;
+    border-bottom: 3px solid rgb(65, 65, 65);
+}
+
+.con p{
+    background-color: rgb(105, 105, 105);
+    padding: 7px;
+    padding-left: 10px;
+    border-radius: 10px;
+    width: 190px;
 }
 
 .info{
     z-index: 1;
     position: relative;
     text-align: center;
-    margin: 0 auto
+    margin: 0 auto;
 }
 .btn{
     display: inline-block;	
 	box-sizing: border-box;
 	padding: 0 25px;
-	margin: 0 15px 15px 0;
 	outline: none;
 	border: 1px solid #fff;
 	border-radius: 50px;
@@ -107,12 +166,15 @@ img{
     width: 1200px;
     box-sizing: content-box;
     margin-bottom: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 7px 10px rgb(56, 44, 49);
 }
 .girlanda{
     height: 150px;
     position: absolute;
     width: 100%;
     margin-top: -65px;
+    z-index: 2;
 }
 .mainText{
     margin-top: 50px;
